# askeladd

./: .env.docker  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  askeladd_demo.cast  docker-compose.yml  run_demo.sh
.github/workflows/: ci.yaml  e2e-test.yaml
askeladd-dvm-marketplace/: .env.example  .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
askeladd-dvm-marketplace/public/pitchdeck/: index.html
askeladd-dvm-marketplace/src/app/: globals.css  layout.tsx  page.tsx
askeladd-dvm-marketplace/src/app/components/: EventCard.tsx  InternalProgram.tsx  Navbar.tsx  ProgramCard.tsx  TagsCard.tsx
askeladd-dvm-marketplace/src/app/components/description/: index.tsx
askeladd-dvm-marketplace/src/app/components/layout/: Navbar.tsx
askeladd-dvm-marketplace/src/app/config-marketplace/: page.tsx
askeladd-dvm-marketplace/src/app/launch-program/: page.tsx
askeladd-dvm-marketplace/src/app/stwo-program/: page.tsx
askeladd-dvm-marketplace/src/app/stwo-program/[id]/: page.tsx
askeladd-dvm-marketplace/src/app/utils/: generateAppHandler.ts
askeladd-dvm-marketplace/src/constants/: program.ts  relay.ts
askeladd-dvm-marketplace/src/context/: NostrContext.tsx
askeladd-dvm-marketplace/src/hooks/: useDVMState.ts  useFetchEvents.ts  useSendNote.ts  useSubmitJob.ts  useWasmNostrSDK.ts
askeladd-dvm-marketplace/src/lib/: stwo.ts
askeladd-dvm-marketplace/src/pkg/: package.json  program_wasm.d.ts  program_wasm.js  program_wasm_bg.wasm  program_wasm_bg.wasm.d.ts  stwo_wasm.d.ts  stwo_wasm.js  stwo_wasm_bg.wasm  stwo_wasm_bg.wasm.d.ts  stwo_wasm_demo.d.ts  stwo_wasm_demo.js  stwo_wasm_demo_bg.wasm  stwo_wasm_demo_bg.wasm.d.ts
askeladd-dvm-marketplace/src/types/: index.ts
config/: default.toml
crates/cli/: Cargo.toml
crates/cli/src/: dvm_customer.rs  dvm_service_provider.rs  main.rs  prover_agent.rs  user_cli.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  data_fixture.rs  db.rs  lib.rs  nostr_utils.rs  prover_service.rs  types.rs  utils.rs  verifier_service.rs  wrappers.rs
crates/core/src/dvm/: customer.rs  mod.rs  service_provider.rs
crates/program_wasm/: Cargo.toml
crates/program_wasm/src/: fibonacci.rs
crates/stwo_wasm/: Cargo.toml  hardcoded_serialised_proof_from_nostr_event.json  index.html  index.js
crates/stwo_wasm/src/: lib.rs  mod.rs  multi_fibonacci.rs  poseidon.rs  types.rs  wide_fibonacci.rs  wide_fibonnacci.rs
crates/stwo_wasm/src/fibonacci/: air.rs  mod.rs  multi_fibonacci.rs
crates/stwo_wasm/src/fibonnaci/: component.rs  mod.rs  multi_fibonacci.rs
docs/: proposal.md
docs/demo/: example_dvm_result_stark_proof.json
docs/img/: askeladd-demo.cast
scripts/: demo.sh  demo_docker_compose_local_relayer.sh  dvm_customer.sh  dvm_service_provider.sh
scripts/utils/: concatenate_files.py
tests/: Cargo.toml  e2e_test.rs
tests/src/: e2e_test.rs
thorfinn/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
thorfinn/public/: manifest.json  options.html  popup.html
thorfinn/src/background/: index.ts
thorfinn/src/content/: index.ts  nostr-provider.ts
thorfinn/src/options/: Options.tsx  index.tsx
thorfinn/src/popup/: Popup.tsx  index.tsx
thorfinn/src/styles/: global.css
