[workspace]
members = ["crates/cli", "crates/core", "crates/program_wasm"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["@AbdelStark"]
homepage = "https://github.com/AbdelStark/askeladd"
repository = "https://github.com/AbdelStark/askeladd.git"
license = "MIT"


[workspace.dependencies]
#stwo-prover = { git = "https://github.com/starkware-libs/stwo.git" }
# Temporary fork for serde compatibility of StarkProof
stwo-prover = { git = "https://github.com/MSghais/stwo.git", rev = "8401c93" }
tokio = { version = "1", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = "0.3"
