[package]
name = "askeladd-cli"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askeladd-core = { path = "../core" }
nostr-sdk = "0.32.0"
tokio = { version = "1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
config = "0.14.0"
dotenv = "0.15"

[[bin]]
name = "user_cli"
path = "src/user_cli.rs"

[[bin]]
name = "prover_agent"
path = "src/prover_agent.rs"

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
