[package]
name = "askeladd-cli"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askeladd = { path = "../core" }
nostr-sdk = "0.33.0"
tokio = { version = "1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
config = "0.14.0"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4.22"
pretty_env_logger = "0.5.0"
env_logger = "0.11.5"
rusqlite = { version = "0.32.0", features = ["bundled"] }
colored = "2.0.0"
chrono = "0.4.38"
text-to-ascii-art = "0.1.10"

[[bin]]
name = "dvm_customer"
path = "src/dvm_customer.rs"

[[bin]]
name = "dvm_service_provider"
path = "src/dvm_service_provider.rs"

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
