[package]
name = "askeladd"
version.workspace = true
edition.workspace = true

[dependencies]
stwo-prover.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.62"
config = "0.14.0"
dotenv = "0.15"
rusqlite = { version = "0.32.0", features = ["bundled"] }
#nostr-sdk = "0.33.0"
nostr-sdk = { git = "https://github.com/AbdelStark/nostr", rev = "95b5f63" }
log = "0.4.22"
tokio = { version = "1", default-features = false }
