[package]
name = "stwo_wasm"
version = "0.1.0"
edition = "2021"
description = "Stwo wasm bindings"
repository = "https://github.com/AbdelStark/askeladd"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
stwo-prover = { git = "https://github.com/starkware-libs/stwo.git" }
wasm-bindgen = "0.2.84"
serde = "1.0.204"
serde_json = "1.0.121"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
